force-app/main/default/objects/copadoQuality__Functional_Review_Session__c/copadoQuality__Functional_Review_Session__c.object-meta.xml
<CustomObject>
    <label>Functional Review Session</label>
    <nameField>
        <displayFormat>FRS-{0000000000}</displayFormat>
        <label>Functional Review Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Functional Review Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>