force-app/main/default/objects/copadoQuality__Functional_Review_Session__c/fields/copadoQuality__Automation_Status__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Automation_Status__c</fullName>
    <label>Automation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>copadoQuality__Automation_Status</valueSetName>
    </valueSet>
</CustomField>