force-app/main/default/objects/copadoQuality__Functional_Review_Session__c/fields/copadoQuality__Credential__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credential</label>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Functional Review Sessions</relationshipLabel>
    <relationshipName>Functional_Review_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>