force-app/main/default/objects/copadoQuality__Functional_Review_Session__c/fields/copadoQuality__Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Execution_Status__c</fullName>
    <label>Execution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>copadoQuality__Execution_Status</valueSetName>
    </valueSet>
</CustomField>