force-app/main/default/objects/copadoQuality__Functional_Review_Session__c/fields/copadoQuality__Exploration_URL__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Exploration_URL__c</fullName>
    <label>Exploration URL</label>
    <type>Url</type>
</CustomField>