force-app/main/default/objects/copadoQuality__Functional_Review_Session__c/fields/copadoQuality__External_Id__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>