force-app/main/default/objects/copadoQuality__Functional_Review_Session__c/fields/copadoQuality__Outcome__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>copadoQuality__Session_Outcome</valueSetName>
    </valueSet>
</CustomField>