force-app/main/default/objects/copadoQuality__Functional_Review_Session__c/fields/copadoQuality__Review_Environment__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Review_Environment__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+copadoQuality__Functional_Review__r.copadoQuality__Review_Environment__c,  copadoQuality__Functional_Review__r.copadoQuality__Review_Environment__r.Name , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Environment</label>
    <type>Text</type>
</CustomField>