force-app/main/default/objects/copadoQuality__Functional_Review_Session__c/fields/copadoQuality__User_Story__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Functional Review Sessions</relationshipLabel>
    <relationshipName>Functional_Review_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>